--- a/b-n-sao-c-a-colaboratory-ch-o-m-ng-b-n.ipynb
+++ b/b-n-sao-c-a-colaboratory-ch-o-m-ng-b-n.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/lehienclhd/ac566c642d5edae31a8d9eb2fd454cec/b-n-sao-c-a-colaboratory-ch-o-m-ng-b-n.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Pi\n",
@@ -422,7 +432,8 @@
     "colab": {
       "collapsed_sections": [],
       "toc_visible": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
